# python-project-52

./: .codeclimate.yml  .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  db.sqlite3  docker-compose.yml  nixpacks.toml  pyproject.toml  setup.cfg
.github/workflows/: task_manager.yml
static/: staticfiles.json
task_manager/: rollbar_middleware.py  services.py  settings.py  trans_conf.json  trans_conf.py  urls.py  views.py  wsgi.py
task_manager/functional_tests/: __init__.py  registration_form.py  test_tasks.py
task_manager/gunicorn/: gunicorn.service
task_manager/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/label/: create.html  delete.html  index.html  update.html
task_manager/labels/test_labels/: test_labels_module.py
task_manager/labels/tests/: test_labels_form.py  test_labels_model.py  test_labels_views.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/main/: admin.py  forms.py  forms2.py  urls.py  views.py  views2.py
task_manager/main/templates/main/: index.html
task_manager/main/templatetags/: user_extras.py
task_manager/main/tests/tests_views/: test_main_view.py
task_manager/nginx/: Dockerfile  nginx.conf
task_manager/tags/: forms.py  views.py
task_manager/tags/templates/tag/: create.html
task_manager/task_status/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/task_status/migrations/: 0001_initial.py  0002_alter_taskstatus_name.py
task_manager/task_status/test_statuses/: test_statuses_module.py  test_statuses_views.py
task_manager/task_status/tests/: test_statuses_module.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_tags.py  0002_rename_performer_tasks_executor.py  0003_alter_tasks_description.py  0004_alter_tasks_description_alter_tasks_performer.py  0005_alter_tasks_performer.py
task_manager/tasks/tests/: test_task_models.py  test_task_views.py  test_tasks_form.py
task_manager/templates/: 404.html  500.html  base.html  base_form.html  index.html  login.html  navbar.html  update.html  users.html
task_manager/tests/: conftest.py  test_data_user.json  test_forbidden_to_delete.py  test_forms.py  test_models.py  test_views.py
task_manager/tests/functional_tests/: __init__.py  test_registration_form.py
task_manager/tests/tasks_tests/: tasks_test_suites.md
task_manager/tests/user_tests/: test_views.py  users_test_suites.md
task_manager/users/: forms.py  models.py  urls.py  urls_login.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: OLD_test_registration_user.py  test_forms_user.py  test_models_user.py  test_modules_user.py  test_views_user.py  users_test_suites.md
templates/: index.html
(+31 files in other folders)
