[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager - a system for managing tasks"
authors = ["Timofey Yakovishin <yakovishintimofey@gmail.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
dj-database-url = "^1.3.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
