[tool.poetry]
name = "hexlet-code"
version = "1.1.0"
description = "Task Manager - a system for managing tasks"
authors = ["Timofey Yakovishin <yakovishintimofey@gmail.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
dj-database-url = "^1.3.0"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
python-dotenv = "^1.0.0"
django-bootstrap4 = "^23.1"
django-modeltranslation = "^0.18.9"
pytest = "^7.3.1"
django-extensions = "^3.2.1"
ipython = "^8.13.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
