[tool.poetry]
name = "hexlet-code"
version = "3.0.0"
description = "Task Manager - a system for managing tasks"
authors = ["Timofey Yakovishin <yakovishintimofey@gmail.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
python-dotenv = "^1.0.0"
django-modeltranslation = "^0.18.9"
pytest = "^7.3.1"
django-extensions = "^3.2.1"
ipython = "^8.13.1"
selenium = "^4.9.0"
webdriver-manager = "^3.8.6"
django-filter = "^23.2"
rollbar = "^0.16.3"
django-debug-toolbar = "^4.0.0"
django-bootstrap4 = "^23.1"
pytest-cov = "^4.1.0"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-django = "^4.5.2"
black = "^23.3.0"
mypy = "^1.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 79
exclude = ["old*", "OLD*"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]


[tool.black]
line-length = 79
target_version = ["py310"]

[tool.isort]
line_length = 79
profile = "black"
py_version = 310
multi_line_output = 3

[tool.coverage.report]
omit = ["wsgi.py", "settings.py", "__init__.py",
        "urls.py", "asgi.py", "apps.py", "conftest.py",
        "rollbar_middleware.py", "admin.py", 'test*']
